# VINS-Fusion-voxl2mini

camera_models/: CMakeLists.txt
config/euroc/: euroc_mono_imu_config.yaml  euroc_stereo_imu_config.yaml
config/predator/: cam0_pinhole.yaml  cam1_pinhole.yaml  cam1_pinhole_equi.yaml  cam2_pinhole.yaml  cam2_pinhole_equi.yaml  cam3_pinhole_boson.yaml  cam3_pinhole_cir.yaml  predator_mono_imu_config.yaml  predator_mono_ir_imu_config.yaml  predator_mono_ir_imu_config_lepton_l_r.yaml
global_fusion/: CMakeLists.txt
loop_fusion/: CMakeLists.txt
vins_estimator/: CMakeLists.txt
vins_estimator/src/estimator/: estimator.cpp  estimator.h  parameters.cpp  parameters.h
vins_estimator/src/utility/: visualization.cpp
